--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
         <Button
@@ -42,5 +42,36 @@
             android:layout_marginBottom="50dp"
             android:id="@+id/keyOut"
             android:textSize="30sp"/>
+
+        <TextView
+            android:text="Z: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="18dp"
+            android:layout_marginBottom="13dp"
+            android:id="@+id/zText" />
+
+        <TextView
+            android:text="X: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/xText"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="17dp"
+            android:layout_marginBottom="17dp" />
+
+        <TextView
+            android:text="Y: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/yText"
+            android:layout_alignBaseline="@+id/zText"
+            android:layout_alignBottom="@+id/zText"
+            android:layout_centerHorizontal="true" />
+
     </RelativeLayout>
+
 </RelativeLayout>
