--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.finetype.hacking.finetype.MainActivity">
 
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:id="@+id/spinner"
-        android:layout_alignParentEnd="true" />
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:id="@+id/keyPress"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="190dp"
             android:textSize="50sp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true" />
@@ -39,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="90dp"
+            android:layout_marginBottom="450dp"
             android:id="@+id/keyOut"
             android:textSize="15sp"/>
 
@@ -71,6 +64,58 @@
             android:layout_alignBaseline="@+id/zText"
             android:layout_alignBottom="@+id/zText"
             android:layout_centerHorizontal="true" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="A B C D E F G"
+            android:ems="10"
+            android:layout_marginTop="40dp"
+            android:id="@+id/firstArray"
+            android:layout_alignTop="@+id/keyOut"
+            android:layout_alignParentStart="true"
+            android:clickable="false"
+            android:enabled="false" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="H I J K L M N"
+            android:ems="10"
+            android:id="@+id/secondArray"
+            android:layout_alignBaseline="@+id/firstArray"
+            android:layout_alignBottom="@+id/firstArray"
+            android:layout_alignParentEnd="true"
+            android:clickable="false"
+            android:enabled="false" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="O P Q R S T U"
+            android:ems="10"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="119dp"
+            android:id="@+id/thirdArray"
+            android:clickable="false"
+            android:enabled="false" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="V W X Y Z"
+            android:ems="10"
+            android:id="@+id/fourthArray"
+            android:layout_alignBaseline="@+id/thirdArray"
+            android:layout_alignBottom="@+id/thirdArray"
+            android:layout_alignStart="@+id/secondArray"
+            android:clickable="false"
+            android:enabled="false" />
 
     </RelativeLayout>
 
